compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__custom_types__record_access_in_guard_with_reserved_field_name.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/custom_types.rs
assertion_line: 638
expression: "\npub type Thing {\n  Thing(constructor: Nil)\n}\n\npub fn main() {\n  let a = Thing(constructor: Nil)\n  case Nil {\n      Nil if a.constructor == Nil -> a.constructor\n      _ -> Nil\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type Thing {
  Thing(constructor: Nil)
}

pub fn main() {
  let a = Thing(constructor: Nil)
  case Nil {
      Nil if a.constructor == Nil -> a.constructor
      _ -> Nil
  }
}


----- COMPILED JAVASCRIPT
import { CustomType as $CustomType } from "../gleam.mjs";

export class Thing extends $CustomType {
  constructor(constructor) {
    super();
    this.constructor$ = constructor;
  }
}
export const Thing$Thing = (constructor) => new Thing(constructor);
export const Thing$isThing = (value) => value instanceof Thing;
export const Thing$Thing$constructor = (value) => value.constructor$;
export const Thing$Thing$0 = (value) => value.constructor$;

export function main() {
  let a = new Thing(undefined);
  let $ = undefined;
  if (a.constructor$ === undefined) {
    return a.constructor$;
  } else {
    return undefined;
  }
}
