compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__custom_types__record_access_in_pattern_with_reserved_field_name.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/custom_types.rs
assertion_line: 657
expression: "\npub type Thing {\n  Thing(constructor: Nil)\n}\n\npub fn main() {\n  let a = Thing(constructor: Nil)\n  let Thing(constructor: ctor) = a\n  case a {\n      a if a.constructor == ctor -> Nil\n      Thing(constructor:) if ctor == constructor -> Nil\n      _ -> Nil\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type Thing {
  Thing(constructor: Nil)
}

pub fn main() {
  let a = Thing(constructor: Nil)
  let Thing(constructor: ctor) = a
  case a {
      a if a.constructor == ctor -> Nil
      Thing(constructor:) if ctor == constructor -> Nil
      _ -> Nil
  }
}


----- COMPILED JAVASCRIPT
import { CustomType as $CustomType } from "../gleam.mjs";

export class Thing extends $CustomType {
  constructor(constructor) {
    super();
    this.constructor$ = constructor;
  }
}
export const Thing$Thing = (constructor) => new Thing(constructor);
export const Thing$isThing = (value) => value instanceof Thing;
export const Thing$Thing$constructor = (value) => value.constructor$;
export const Thing$Thing$0 = (value) => value.constructor$;

export function main() {
  let a = new Thing(undefined);
  let ctor;
  ctor = a.constructor$;
  let a$1 = a;
  if (a$1.constructor$ === ctor) {
    return undefined;
  } else {
    let constructor = a.constructor$;
    if (ctor === constructor) {
      return undefined;
    } else {
      return undefined;
    }
  }
}
