compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__custom_types__record_with_field_named_constructor.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/custom_types.rs
assertion_line: 605
expression: "\npub type Thing {\n  Thing(constructor: Nil)\n}\n\npub fn main() {\n  let a = Thing(constructor: Nil)\n  let b = Thing(..a, constructor: Nil)\n  b.constructor\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type Thing {
  Thing(constructor: Nil)
}

pub fn main() {
  let a = Thing(constructor: Nil)
  let b = Thing(..a, constructor: Nil)
  b.constructor
}


----- COMPILED JAVASCRIPT
import { CustomType as $CustomType } from "../gleam.mjs";

export class Thing extends $CustomType {
  constructor(constructor) {
    super();
    this.constructor$ = constructor;
  }
}
export const Thing$Thing = (constructor) => new Thing(constructor);
export const Thing$isThing = (value) => value instanceof Thing;
export const Thing$Thing$constructor = (value) => value.constructor$;
export const Thing$Thing$0 = (value) => value.constructor$;

export function main() {
  let a = new Thing(undefined);
  let b = new Thing(undefined);
  return b.constructor$;
}
