compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__custom_types__record_with_field_named_then.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/custom_types.rs
assertion_line: 622
expression: "\npub type Thing {\n  Thing(then: Nil)\n}\n\npub fn main() {\n  let a = Thing(then: Nil)\n  let b = Thing(..a, then: Nil)\n  b.then\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type Thing {
  Thing(then: Nil)
}

pub fn main() {
  let a = Thing(then: Nil)
  let b = Thing(..a, then: Nil)
  b.then
}


----- COMPILED JAVASCRIPT
import { CustomType as $CustomType } from "../gleam.mjs";

export class Thing extends $CustomType {
  constructor(then$) {
    super();
    this.then$ = then$;
  }
}
export const Thing$Thing = (then$) => new Thing(then$);
export const Thing$isThing = (value) => value instanceof Thing;
export const Thing$Thing$then = (value) => value.then$;
export const Thing$Thing$0 = (value) => value.then$;

export function main() {
  let a = new Thing(undefined);
  let b = new Thing(undefined);
  return b.then$;
}
