compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__custom_types__singleton_record_reverse_order.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/custom_types.rs
assertion_line: 725
expression: "\npub type Wibble {\n  Wibble\n  Wobble\n}\n\npub fn is_wibble_reverse(w: Wibble) -> Bool {\n  Wibble == w\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type Wibble {
  Wibble
  Wobble
}

pub fn is_wibble_reverse(w: Wibble) -> Bool {
  Wibble == w
}


----- COMPILED JAVASCRIPT
import { CustomType as $CustomType } from "../gleam.mjs";

export class Wibble extends $CustomType {}
export const Wibble$Wibble = () => new Wibble();
export const Wibble$isWibble = (value) => value instanceof Wibble;

export class Wobble extends $CustomType {}
export const Wibble$Wobble = () => new Wobble();
export const Wibble$isWobble = (value) => value instanceof Wobble;

export function is_wibble_reverse(w) {
  return w instanceof Wibble;
}
