compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__custom_types__types_must_be_rendered_before_functions.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/custom_types.rs
assertion_line: 579
expression: "\npub fn one() { One }\npub type One { One }\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn one() { One }
pub type One { One }


----- COMPILED JAVASCRIPT
import { CustomType as $CustomType } from "../gleam.mjs";

export class One extends $CustomType {}
export const One$One = () => new One();
export const One$isOne = (value) => value instanceof One;

export function one() {
  return new One();
}
