compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__custom_types__unnamed_fields_typescript.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/custom_types.rs
assertion_line: 179
expression: "\npub type Ip{\n    Ip(String)\n}\n\npub const local = Ip(\"0.0.0.0\")\n\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type Ip{
    Ip(String)
}

pub const local = Ip("0.0.0.0")



----- TYPESCRIPT DEFINITIONS
import type * as _ from "../gleam.d.mts";

export class Ip extends _.CustomType {
  /** @deprecated */
  constructor(argument$0: string);
  /** @deprecated */
  0: string;
}
export function Ip$Ip($0: string): Ip$;
export function Ip$isIp(value: Ip$): boolean;
export function Ip$Ip$0(value: Ip$): string;

export type Ip$ = Ip;

export const local: Ip$;
